fix() : [FOR-133] Fix button z-index

--- a/src/main/resources/public/sass/global/_formulaire.scss
+++ b/src/main/resources/public/sass/global/_formulaire.scss
@@ -95,6 +95,7 @@ body.formulaire section.main {
     position: fixed;
     right: 15px;
     bottom: 15px;
+    z-index: 1;
 
     transition: all 0.1s ease-in-out;
   }
